2012-09-17  Chris Metcalf  <cmetcalf@tilera.com>

	* crypt/md5test-giant.c (TIMEOUT): Increase to 8 minutes for tilegx.

2012-09-17  Joseph Myers  <joseph@codesourcery.com>

	* libio/iogetline.c [_LIBC || !_G_HAVE_IO_GETLINE_INFO]: Make code
	unconditional.
	* libio/iogetwline.c [_LIBC || !_G_HAVE_IO_GETLINE_INFO]:
	Likewise.
	* sysdeps/generic/_G_config.h (_G_HAVE_IO_GETLINE_INFO): Remove.
	* sysdeps/gnu/_G_config.h (_G_HAVE_IO_GETLINE_INFO): Likewise.
	* sysdeps/mach/hurd/_G_config.h (_G_HAVE_IO_GETLINE_INFO):
	Likewise.

2012-09-14  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14587]
	* Makeconfig (ASFLAGS): Remove $(have-cpp-asm-debuginfo) check.
	* config.make.in (have-cpp-asm-debuginfo): Removed.
	* configure.in: Don't substitute libc_cv_cpp_asm_debuginfo.
	* configure: Regenerated.

2012-09-14  Joseph Myers  <joseph@codesourcery.com>

	[BZ #5044]
	* stdio-common/printf_fp.c: Include <stdbool.h> and
	<rounding-mode.h>.
	(___printf_fp): Determine rounding using get_rounding_mode and
	round_away.
	* stdio-common/tst-printf-round.c: New file.
	* stdio-common/Makefile (tests): Add tst-printf-round.
	(link-libm): New variable.
	($(objpfx)tst-printf-round): Depend in $(link-libm).

2012-09-13  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14576]
	* bits/libc-lock.h (__rtld_lock_init_recursive): Removed.
	* sysdeps/mach/bits/libc-lock.h (__rtld_lock_init_recursive):
	Likewise.
	* sysdeps/mach/hurd/bits/libc-lock.h (__rtld_lock_init_recursive):
	Likewise.

2012-09-13  Joseph Myers  <joseph@codesourcery.com>

	* libio/libio.h [!_G_HAVE_PRINTF_FP] (_IO_USE_DTOA): Remove.
	* sysdeps/generic/_G_config.h (_G_HAVE_PRINTF_FP): Likewise.
	* sysdeps/gnu/_G_config.h (_G_HAVE_PRINTF_FP): Likewise.
	* sysdeps/mach/hurd/_G_config.h (_G_HAVE_PRINTF_FP): Likewise.

2012-09-12  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14518]
	* include/rounding-mode.h: New file.
	* sysdeps/generic/get-rounding-mode.h: Likewise.
	* sysdeps/s390/fpu/get-rounding-mode.h: Likewise.