@@ -1,6 +1,3 @@
 ifeq ($(subdir),misc)
 tests += tst-writev
-
-# Time enough for a large writev syscall to complete.
-tst-writev-ENV = TIMEOUTFACTOR="10"
 endif
